force-app/main/default/objects/ACC_AdditionalInfo__c/ACC_AdditionalInfo__c.object-meta.xml
<CustomObject>
    <label>Additional Account Info</label>
    <nameField>
        <label>Account Additional Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Additional Account Info</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>