force-app/main/default/objects/ACC_AdditionalInfo__c/fields/Account_lk__c.field-meta.xml
<CustomField>
    <fullName>Account_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Additional Account Info</relationshipLabel>
    <relationshipName>AdditionalAcctInfosAsMGA</relationshipName>
    <type>Lookup</type>
</CustomField>