force-app/main/default/objects/ACC_AdditionalInfo__c/fields/AccountHolderName__c.field-meta.xml
<CustomField>
    <fullName>AccountHolderName__c</fullName>
    <label>A/C Holding Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>