force-app/main/default/objects/ACC_AdditionalInfo__c/fields/AccountNumber__c.field-meta.xml
<CustomField>
    <fullName>AccountNumber__c</fullName>
    <label>A/C Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>