force-app/main/default/objects/ACC_AdditionalInfo__c/fields/ActiveKr_is__c.field-meta.xml
<CustomField>
    <fullName>ActiveKr_is__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active_KR</label>
    <type>Checkbox</type>
</CustomField>