force-app/main/default/objects/ACC_AdditionalInfo__c/fields/ActiveRe_is__c.field-meta.xml
<CustomField>
    <fullName>ActiveRe_is__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active_Re</label>
    <type>Checkbox</type>
</CustomField>