force-app/main/default/objects/ACC_AdditionalInfo__c/fields/ActiveRequestDec__c.field-meta.xml
<CustomField>
    <fullName>ActiveRequestDec__c</fullName>
    <label>Active Request Dec</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>