force-app/main/default/objects/ACC_AdditionalInfo__c/fields/ActiveSecurity_is__c.field-meta.xml
<CustomField>
    <fullName>ActiveSecurity_is__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active_Security</label>
    <type>Checkbox</type>
</CustomField>