force-app/main/default/objects/ACC_AdditionalInfo__c/fields/ApprovalStatusSecurity__c.field-meta.xml
<CustomField>
    <fullName>ApprovalStatusSecurity__c</fullName>
    <label>Approval Status (Security)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Final</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>