force-app/main/default/objects/ACC_AdditionalInfo__c/fields/BindingFrom__c.field-meta.xml
<CustomField>
    <fullName>BindingFrom__c</fullName>
    <label>Binding From</label>
    <type>Date</type>
</CustomField>