force-app/main/default/objects/ACC_AdditionalInfo__c/fields/BindingFrom_fm__c.field-meta.xml
<CustomField>
    <fullName>BindingFrom_fm__c</fullName>
    <formula>IF(
    ISBLANK(BindingFrom__c),
    &quot;&quot;,
    TEXT(YEAR(BindingFrom__c)) &amp; &quot;-&quot; &amp;
    LPAD(TEXT(MONTH(BindingFrom__c)), 2, &quot;0&quot;) &amp; &quot;-&quot; &amp;
    LPAD(TEXT(DAY(BindingFrom__c)), 2, &quot;0&quot;)
)</formula>
    <label>Binding From(fm)</label>
    <type>Text</type>
</CustomField>