force-app/main/default/objects/ACC_AdditionalInfo__c/fields/BindingTo__c.field-meta.xml
<CustomField>
    <fullName>BindingTo__c</fullName>
    <label>Binding To</label>
    <type>Date</type>
</CustomField>