force-app/main/default/objects/ACC_AdditionalInfo__c/fields/BindingTo_fm__c.field-meta.xml
<CustomField>
    <fullName>BindingTo_fm__c</fullName>
    <formula>IF(
    ISBLANK(BindingTo__c),
    &quot;&quot;,
    TEXT(YEAR(BindingTo__c)) &amp; &quot;-&quot; &amp;
    LPAD(TEXT(MONTH(BindingTo__c)), 2, &quot;0&quot;) &amp; &quot;-&quot; &amp;
    LPAD(TEXT(DAY(BindingTo__c)), 2, &quot;0&quot;)
)</formula>
    <label>BindingTo(fm)</label>
    <type>Text</type>
</CustomField>