force-app/main/default/objects/ACC_AdditionalInfo__c/fields/InterBank__c.field-meta.xml
<CustomField>
    <fullName>InterBank__c</fullName>
    <label>Intermediary Bank Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>