force-app/main/default/objects/ACC_AdditionalInfo__c/fields/InterBankCode__c.field-meta.xml
<CustomField>
    <fullName>InterBankCode__c</fullName>
    <label>Intermediary Bank Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>