force-app/main/default/objects/ACC_AdditionalInfo__c/fields/LastStatusChangeDt__c.field-meta.xml
<CustomField>
    <fullName>LastStatusChangeDt__c</fullName>
    <label>Last Act/De-activation date</label>
    <type>Date</type>
</CustomField>