force-app/main/default/objects/ACC_AdditionalInfo__c/fields/LOA_is__c.field-meta.xml
<CustomField>
    <fullName>LOA_is__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LOA</label>
    <type>Checkbox</type>
</CustomField>