force-app/main/default/objects/ACC_AdditionalInfo__c/fields/Main_is__c.field-meta.xml
<CustomField>
    <fullName>Main_is__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Main Bank Account</label>
    <type>Checkbox</type>
</CustomField>