force-app/main/default/objects/ACC_AdditionalInfo__c/fields/MGAName_fm__c.field-meta.xml
<CustomField>
    <fullName>MGAName_fm__c</fullName>
    <formula>Account_lk__r.Name</formula>
    <label>MGA Name</label>
    <type>Text</type>
</CustomField>