force-app/main/default/objects/ACC_AdditionalInfo__c/fields/OffOnShore__c.field-meta.xml
<CustomField>
    <fullName>OffOnShore__c</fullName>
    <label>Off/On-Shore</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onshore</fullName>
            </value>
            <value>
                <fullName>Offshore</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>