force-app/main/default/objects/ACC_AdditionalInfo__c/fields/RecordTypeName_fm__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeName_fm__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <label>Record Type Name</label>
    <type>Text</type>
</CustomField>