force-app/main/default/objects/ACC_AdditionalInfo__c/fields/Reinsurer_lk__c.field-meta.xml
<CustomField>
    <fullName>Reinsurer_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reinsurer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Additional Account Info (Reinsurer)</relationshipLabel>
    <relationshipName>AdditionalAcctInfosAsReinsurer</relationshipName>
    <type>Lookup</type>
</CustomField>