force-app/main/default/objects/ACC_AdditionalInfo__c/fields/ReinsurerName_fm__c.field-meta.xml
<CustomField>
    <fullName>ReinsurerName_fm__c</fullName>
    <formula>Reinsurer_lk__r.Name</formula>
    <label>Reinsure Name</label>
    <type>Text</type>
</CustomField>