force-app/main/default/objects/ACC_AdditionalInfo__c/fields/SecurityName_fm__c.field-meta.xml
<CustomField>
    <fullName>SecurityName_fm__c</fullName>
    <formula>IF( 
    RecordType.DeveloperName = &apos;Security&apos;,  
    HYPERLINK(&quot;/&quot; &amp; Id, Name, &quot;_blank&quot;), 
    Null
)</formula>
    <label>Security Name</label>
    <type>Text</type>
</CustomField>