force-app/main/default/objects/ACC_AdditionalInfo__c/fields/SwiftCode__c.field-meta.xml
<CustomField>
    <fullName>SwiftCode__c</fullName>
    <label>Swift Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>