force-app/main/default/objects/ACC_AdditionalInfo__c/recordTypes/BankInformation.recordType-meta.xml
<RecordType>
    <fullName>BankInformation</fullName>
    <active>true</active>
    <label>Bank Information</label>
</RecordType>