force-app/main/default/objects/ACC_AdditionalInfo__c/recordTypes/Security.recordType-meta.xml
<RecordType>
    <fullName>Security</fullName>
    <active>true</active>
    <label>Security</label>
</RecordType>