force-app/main/default/objects/ACC_AdditionalInfo__c/validationRules/Change_Active.validationRule-meta.xml
<ValidationRule>
    <fullName>Change_Active</fullName>
    <active>true</active>
    <description>Active는 승인절차를 통해서만 가능하게 제어</description>
    <errorConditionFormula>ISCHANGED(ActiveSecurity_is__c) &amp;&amp; 
ActiveSecurity_is__c &amp;&amp; 
NOT(PRIORVALUE(ActiveSecurity_is__c))</errorConditionFormula>
    <errorMessage>Activation is available only through an approval process.</errorMessage>
</ValidationRule>