force-app/main/default/objects/ACC_AdditionalInfo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BindingFrom__c</columns>
    <columns>BindingTo__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>